# srcs/requirements/backend/nest-js/swagger.json
@@ -251,7 +251,7 @@
         }
       }
     },
-    "/chat/@{channel}": {
+    "/chat/@{channel}/{relation}": {
       "get": {
         "operationId": "ChatController_findChannel",
         "parameters": [
@@ -262,23 +262,27 @@
             "schema": {
               "type": "string"
             }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        }
-      },
-      "delete": {
-        "operationId": "ChatController_removeChannel",
-        "parameters": [
+          },
           {
-            "name": "channel",
+            "name": "relation",
             "required": true,
             "in": "path",
             "schema": {
-              "type": "string"
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
+            "name": "relations",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
             }
           }
         ],
@@ -392,6 +396,26 @@
         "parameters": [
           {
             "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/chat/@{channel}": {
+      "delete": {
+        "operationId": "ChatController_removeChannel",
+        "parameters": [
+          {
+            "name": "channel",
             "required": true,
             "in": "path",
             "schema": {
